--- a/style.css
+++ b/style.css
@@ -1,140 +1,156 @@
 body {
-  color: #40514E;
-  margin: 0;
-  text-align: center;
-  font-family: 'Merriweather', serif;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: #044242
 }
 
 h1 {
-  color: #66BFBF;
-  font-size: 5.625rem;
-  margin: 50px auto 0 auto;
-  font-family: 'Sacramento', cursive;
+    margin: 170px auto 0 auto;
+    font-family: sacramento;
+    font-size: 6rem;
+    color: #044242;
 }
 
 h2 {
-  color: #66BFBF;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 2.5rem;
-  font-weight: normal;
-  padding-bottom: 10px;
+    font-family: Montserrat;
+    font-size: 2.5rem;
+    color: #025858;
+    padding-bottom: 10px;
 }
 
 h3 {
-  color: #11999E;
-  font-family: 'Montserrat', sans-serif;
+    font-family: Montserrat;
+    font-size: 1.5rem;
+    color: #025858;
 }
 
 p {
-  line-height: 2;
+    color: #025858;
+    font-size: 1rem;
+    padding-bottom: 2rem;
+    line-height: 2;
 }
 
 hr {
-  border: dotted #EAF6F6 6px;
-  border-bottom: none;
-  width: 4%;
-  margin: 100px auto;
+    border: 6px dotted #EAF6F6;
+    border-bottom: none;
+    width: 40%;
 }
 
-a{
-  color: #11999E;
-  font-family: 'Montserrat', sans-serif;
-  margin: 10px 20px;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #EAF6F6;
+.span {
+    font-weight: bolder;
+    color: red;
 }
 
 .top-container {
-  background-color: #E4F9F5;
-  position: relative;
-  padding-top: 100px;
+    background-color: #e0e7e7;
+    position: relative;
+    padding-top: 100px;
+    overflow: visible;
+    border-bottom-radius: 25%;
 }
 
-.middle-container {
-  margin: 100px 0;
-}
-
-.bottom-container {
-  background-color: #66BFBF;
-  padding: 50px 0 20px;
-}
-
-.skill-row {
-  width: 50%;
-  margin: 100px auto 100px auto;
-  text-align: left;
-}
-
-.pro {
-  text-decoration: underline;
-}
-
-.intro {
-  width: 30%;
-  margin: auto;
-}
-
-.contact-message {
-  width: 40%;
-  margin: 40px auto 60px;
-}
-
-.copyright {
-  color: #EAF6F6;
-  font-size: 0.75rem;
-  padding: 20px 0;
+@media (min-width: 360px) {
+    .top-container {
+        margin-left: -600px;
+        margin-right: -600px;
+    }
 }
 
 .top-cloud {
-  position: absolute;
-  right: 300px;
-  top: 40px;
+    position: absolute;
+    right: 600px;
+    top: 100px;
 }
 
 .bottom-cloud {
-  position: absolute;
-  left: 250px;
-  bottom: 300px;
+    position: absolute;
+    left: 600px;
 }
 
-.code-img {
-  width: 25%;
-  float: left;
-  margin-right: 30px;
+.middle-container {
+    margin: 80px 0;
 }
 
-.chilli-img {
-  width: 25%;
-  float: right;
-  margin-left: 30px;
+.med {
+    width: 40%;
+    float: left;
+    margin-right: 50px;
+}
+
+.web {
+    width: 40%;
+    float: left;
+    margin-left: 50px;
+}
+
+.intro {
+    width: 50%;
+    margin: auto;
+}
+
+.skill-row {
+    width: 30%;
+    margin: 80px auto 150px auto;
+    text-align: right;
+}
+
+.contact-message {
+    width: 40%;
+    margin: 40px auto 60px;
 }
 
 .btn {
-  background: #11cdd4;
-  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
-  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
-  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
-  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
-  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
-  -webkit-border-radius: 8;
-  -moz-border-radius: 8;
-  border-radius: 8px;
-  font-family: 'Montserrat', sans-serif;
-  color: #ffffff;
-  font-size: 20px;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
+    background: #9ab3c4;
+    background-image: -webkit-linear-gradient(top, #9ab3c4, #327ba8);
+    background-image: -moz-linear-gradient(top, #9ab3c4, #327ba8);
+    background-image: -ms-linear-gradient(top, #9ab3c4, #327ba8);
+    background-image: -o-linear-gradient(top, #9ab3c4, #327ba8);
+    background-image: linear-gradient(to bottom, #9ab3c4, #327ba8);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Montserrat;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
 }
 
 .btn:hover {
-  background: #30e3cb;
-  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
-  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
-  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
-  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
-  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
-  text-decoration: none;
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+}
+
+.bottom-container {
+    background-color: #2a78a6;
+    padding: 40px;
+    color: #fff;
+    margin: 0px auto 0 auto;
+}
+
+.author {
+    font-size: .8rem;
+    color: #fff;
+    padding: 20px 0;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.2rem;
+    margin-right: 15px;
+    font-weight: bolder;
+}
+
+a:hover {
+    color: #9ab3c4;
 }
