--- a/style.css
+++ b/style.css
@@ -53,12 +53,6 @@ hr {
     border-bottom-radius: 25%;
 }
 
-@media (min-width: 360px) {
-    .top-container {
-        margin-left: -600px;
-        margin-right: -600px;
-    }
-}
 
 .top-cloud {
     position: absolute;
@@ -131,10 +125,8 @@ hr {
 }
 
 .bottom-container {
-    background-color: #2a78a6;
-    padding: 40px;
-    color: #fff;
-    margin: 0px auto 0 auto;
+  background-color: #66BFBF;
+  padding: 50px 0 20px;
 }
 
 .author {
